修复命令过长bug